[nasa/cryptolib#299] test fixing error using clang-format

--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -24,3 +24,4 @@ jobs:
           step-summary: 'true'
           no-lgtm: 'false'
           passive-reviews: 'true'
+          ignore: 'test/include/utest.h'
