--- a/support/Dockerfile
+++ b/support/Dockerfile
@@ -39,8 +39,7 @@ RUN apt-get update -y \
         python3-dev \
         python3-pip \
         unzip \
-    && rm -rf /var/lib/apt/lists/* \
-    && pip3 install pycryptodome
+    && rm -rf /var/lib/apt/lists/* 
 
 FROM cl0 AS cl1
 ARG GPG_ERROR_VERSION=1.50
