[#258] Test outside cryptolib container.

--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -11,8 +11,8 @@ on:
 jobs:
   coverage:
     runs-on: ubuntu-latest
-    container:
-      image: ivvitc/cryptolib:20240814
+    # container:
+    #   image: ivvitc/cryptolib:20240814
 
     steps:
     # Step 1: Checkout the repository
