--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -12,19 +12,13 @@ jobs:
   coverage:
     runs-on: ubuntu-latest
     container:
-      image: ivvitc/cryptolib:20240814
-
+        image: ivvitc/cryptolib:20240814
     steps:
-    # Step 1: Checkout the repository
-    - name: Checkout Repository
-      uses: actions/checkout@v3
-
-    # Step 2: Install dependencies
+    - uses: actions/checkout@v4
+    - name: Update
+      run: apt-get update
     - name: Install Dependencies
-      run: |
-        export DEBIAN_FRONTEND=noninteractive
-        apt-get update
-        apt-get install -y lcov gcovr libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3
+      run: apt-get install -y lcov libcurl4-openssl-dev libmariadb-dev libmariadb-dev-compat python3
     - name: Install Python Libraries
       run: pip install pycryptodome
     - name: Install Libgcrypt
@@ -44,13 +38,14 @@ jobs:
         && ./configure 
         && make install
         && ldconfig
-    # Step 3: Build the project with coverage instrumentation
-    - name: Build with Coverage
+    # End Container Setup
+    
+    - name: Internal Build Script
       working-directory: ${{github.workspace}}
       run: |
-        export CFLAGS="-fprofile-arcs -ftest-coverage -g"
+        # export CFLAGS="-fprofile-arcs -ftest-coverage -g"
         bash ${GITHUB_WORKSPACE}/support/scripts/build_internal.sh
-
+        
     # Step 5: Generate Coverage Report
     - name: Generate Coverage Report
       run: |
