--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -126,12 +126,24 @@ else()
     list(APPEND LIB_SRC_FILES ${MARIADB_FILES})
 endif()
 
+if(NOT CMAKE_CROSSCOMPILING)
+    install(TARGETS cryptolib
+    RUNTIME_DEPENDENCIES
+    # Other dependencies here)
+else()
+    install(TARGETS cryptolib)
+endif()
+
 # Create the app module
 if(DEFINED CFE_SYSTEM_PSPNAME)
     set(CMAKE_INSTALL_RPATH "./${INSTALL_SUBDIR}")
     add_cfe_app(crypto ${LIB_SRC_FILES})
     target_include_directories(crypto PUBLIC ../include)
-    install(TARGETS crypto RUNTIME_DEPENDENCIES DESTINATION ${CMAKE_INSTALL_PREFIX}/${TGTSYS_${SYSVAR}}/${INSTALL_SUBDIR})
+    if(NOT CMAKE_CROSSCOMPILING)
+        install(TARGETS crypto RUNTIME_DEPENDENCIES DESTINATION ${CMAKE_INSTALL_PREFIX}/${TGTSYS_${SYSVAR}}/${INSTALL_SUBDIR})
+    else()
+        install(TARGETS crypto)
+    endif()
 else() 
     # Standalone build
     add_library(crypto SHARED ${LIB_SRC_FILES})
