[nasa/nos3#352] Fix cross-compiling issue

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,7 @@ endif()
 # Project Specifics
 #
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -g -O0")
+set(CMAKE_CROSSCOMPILING "FALSE")
 
 include_directories(include)
 add_subdirectory(src)
