[#258] Cleanup CI, Badge Colors, Artifact Update

--- a/.github/workflows/mc_dc_coverage.yml
+++ b/.github/workflows/mc_dc_coverage.yml
@@ -97,4 +97,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: coverage-report
-        path: coverage
+        path: doc/coverage
